# AccessLM

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  build-desktop.sh  main.js  minimal-main.js  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Cargo.toml  build-wasm.sh
backend/src/: lib.rs
client/: next.config.js  package-lock.json  package.json
client/app/: desktop.js  error.js  global-error.js  globals.css  layout.js  not-found.js  page.js
client/app/desktop/: page.js
client/app/downloads/: page.js
client/lib/: p2p-client.js
electron/: main.js  peer-server.js  peers.js  preload.js  runtimes.js  shards.js  simple-test.js
icons/: icon.icns
scripts/: bundle-llama-cpp-python-macos.sh  postbuild-copy-assets.js
