[package]
name = "accesslm-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "accesslm-p2p"
path = "src/bin/p2p_node.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
js-sys = "0.3"
web-sys = "0.3"
lazy_static = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36", features = ["full"] }
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "mdns", "identify", "ping", "yamux", "noise", "macros", "kad"] }
dirs = "5.0"
futures = "0.3"
if-addrs = "0.10"
